--- a/frontend/quiz-template.html
+++ b/frontend/quiz-template.html
@@ -18,7 +18,7 @@
                 <template v-else>
                     <h3 class="title">Thank you so much</h3>
                     <p v-if="waiting>0">Wait {{waiting}} seconds for seeing your expected result.</p>
-                    <p v-else>We have found best offer for you.</p>
+                    <p v-else>We have found best offer for you as you expected.</p>
                 </template>
             </div>
         </template>
